Create Student Update
Lab specifics.

--- a/createStudent.html
+++ b/createStudent.html
@@ -55,10 +55,14 @@
 					<dt>Lab:</dt>
 					<dd>
 						<select>
-							<option>Lab 1</option>
-							<option>Lab 2</option>
-							<option>Lab 3</option>
-							<option>Lab 4</option>
+							<option>Lab 1 - 301</option>
+							<option>Lab 1 - 303</option>
+							<option>Lab 2 - 301</option>
+							<option>Lab 2 - 302</option>
+							<option>Lab 3 - 301</option>
+							<option>Lab 3 - 302</option>
+							<option>Lab 4 - 301</option>
+							<option>Lab 4 - 304</option>
 							<option>Lab 5</option>
 						</select>						
 					</dd>
